--- a/udagram/udagram-api/.elasticbeanstalk/config.yml
+++ b/udagram/udagram-api/.elasticbeanstalk/config.yml
@@ -1,7 +1,6 @@
 branch-defaults:
   default:
     environment: udagram-api-dev
-    group_suffix: null
 global:
   application_name: udagram-api
   branch: null
@@ -12,7 +11,7 @@ global:
   instance_profile: null
   platform_name: null
   platform_version: null
-  profile: null
+  profile: eb-cli
   repository: null
   sc: null
   workspace_type: Application
