--- a/udagram/udagram-api/.elasticbeanstalk/config.yml
+++ b/udagram/udagram-api/.elasticbeanstalk/config.yml
@@ -1,8 +1,9 @@
 branch-defaults:
   default:
-    environment: udagram-api-dev
+    environment: udagram-api2-dev
+    group_suffix: null
 global:
-  application_name: udagram-api
+  application_name: udagram-api2
   branch: null
   default_ec2_keyname: ndpkey
   default_platform: Node.js 14 running on 64bit Amazon Linux 2
@@ -11,7 +12,7 @@ global:
   instance_profile: null
   platform_name: null
   platform_version: null
-  profile: null
+  profile: eb-cli
   repository: null
   sc: null
   workspace_type: Application
